# quick-translate

./: .env.example  .gitignore  AGENTS.md  README.md  config.example.toml  config.toml  prompt_template.txt  pyproject.toml
scripts/: build-release.ps1
src/quick_translate/: __init__.py  __main__.py  app.py  config.py  database.py  logging_utils.py  openai_client.py  prompting.py  windows_effects.py
src/quick_translate/ui/: history.py  main.py
tests/: support.py  test_app.py  test_config.py  test_database.py  test_logging_utils.py  test_prompting.py  test_ui.py
