[project]
name = "quick-translate"
version = "0.1.5"
description = "A lightweight Windows 11 translation overlay backed by OpenAI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.75.0",
    "PySide6>=6.9.0",
]

[project.scripts]
quick-translate = "quick_translate.app:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quick_translate"]
